--- a/sports/basketball/boys_varsity.html
+++ b/sports/basketball/boys_varsity.html
@@ -18,7 +18,13 @@
 	<link rel="stylesheet" href="/harbingernews/css/jquery.fancybox.css" type="text/css">
 	<link rel="stylesheet" href="/harbingernews/css/sports/template.css" type="text/css">
 	<link rel="stylesheet" href="../css/jquery.lightbox-0.5.css" type="text/css">
-
+	<style type="text/css">
+	
+		#title {
+			background-image: url('/harbingernews/sports/basketball/background-tile.png');
+		}
+	
+	</style>
 	<script src="/harbingernews/js/jquery-1.8.0.min.js"></script>
 	<script src="/harbingernews/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="/harbingernews/js/jquery.lightbox-0.5.js" type="text/javascript"></script>
@@ -54,13 +60,13 @@
 			<div class="container" id="center">
 				<div class="row-fluid" id="titleRow">
 					<div class="span12" id="title">
-						<h1>Test</h1>
+						<h1>Varsity Boys Basketball</h1>
 					</div>
 				</div>
 				
 				<ul class="nav nav-tabs limited-width">
 					<li class="active"><a href="#info" data-toggle="tab">Information</a></li>
-					<li><a href="#photos" data-toggle="tab">Photos</a></li>
+					<li class="disabled"><a href="#photos" data-toggle="tab">Photos</a></li>
 					<li class="disabled"><a href="#videos" data-toggle="tab">Videos</a></li>
 					<li class="pull-right"><a href="#schedule" data-toggle="tab">Schedule</a></li>
 				</ul>
@@ -108,25 +114,144 @@
 								</tr>
 							</thead>
 							<tbody>
-								<tr class="success">
+								<tr>
 									<td>11/24/2012</td>
-									<td>10 am</td>
+									<td>10 AM</td>
 									<td>Commack</td>
 									<td>Away</td>
-									<td>10 to 7</td>
+									<td>N/A</td>
 								</tr>
-								<tr class="error">
+								<tr>
 									<td>11/29/2012</td>
-									<td>3:30 pm</td>
+									<td>3:30 PM</td>
 									<td>Walt Whitman</td>
 									<td>Home</td>
-									<td>8 to 9</td>
+									<td>N/A</td>
 								</tr>
 								<tr>
 									<td>12/1/2012</td>
-									<td>8 am</td>
+									<td>8 AM</td>
 									<td>Northport</td>
 									<td>Home</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>12/8/2012</td>
+									<td>2 PM</td>
+									<td>Tournament</td>
+									<td>Away</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>12/14/2012</td>
+									<td>4:30 PM</td>
+									<td>Lutheran</td>
+									<td>Away</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>12/18/2012</td>
+									<td>6 PM</td>
+									<td>Eastport/S Manor</td>
+									<td>Home</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>12/21/2012</td>
+									<td>5:45 PM</td>
+									<td>Westhampton</td>
+									<td>Away</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>12/28/2012</td>
+									<td>5:45 PM</td>
+									<td>Southampton</td>
+									<td>Away</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>12/29/2012</td>
+									<td>12 AM</td>
+									<td>Tournament</td>
+									<td>Away</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>1/3/2013</td>
+									<td>6 PM</td>
+									<td>Sayville</td>
+									<td>Home</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>1/8/2013</td>
+									<td>5:45 PM</td>
+									<td>Islip</td>
+									<td>Away</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>1/10/2013</td>
+									<td>6 PM</td>
+									<td>Kings Park</td>
+									<td>Home</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>1/15/2013</td>
+									<td>4 PM</td>
+									<td>Rocky Point</td>
+									<td>Away</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>1/22/2013</td>
+									<td>5:45 PM</td>
+									<td>Eastport/S Manor</td>
+									<td>Away</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>1/24/2013</td>
+									<td>6 PM</td>
+									<td>Westhampton</td>
+									<td>Home</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>1/29/2013</td>
+									<td>5:45 PM</td>
+									<td>Sayville</td>
+									<td>Away</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>1/31/2013</td>
+									<td>6 PM</td>
+									<td>Islip</td>
+									<td>Home</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>2/5/2013</td>
+									<td>5:45 PM</td>
+									<td>Kings Park</td>
+									<td>Away</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>2/8/2013</td>
+									<td>6 PM</td>
+									<td>Rocky Point</td>
+									<td>Home</td>
+									<td>N/A</td>
+								</tr>
+								<tr>
+									<td>2/9/2013</td>
+									<td>12 AM</td>
+									<td>New Rochelle</td>
+									<td>Away</td>
 									<td>N/A</td>
 								</tr>
 							</tbody>
