--- a/clubs/index.html
+++ b/clubs/index.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" href="/harbingernews/css/bootstrap.css" type="text/css">
 	<link rel="stylesheet" href="/harbingernews/css/bootstrap-responsive.css" type="text/css">
 	<link rel="stylesheet" href="/harbingernews/css/jquery.fancybox.css" type="text/css">
-	<link rel="stylesheet" href="/harbingernews/css/all.css" type="text/css">
+	<link rel="stylesheet" href="/harbingernews/css/clubs.css" type="text/css">
 	
 	<script src="/harbingernews/js/jquery-1.8.0.min.js"></script>
 	<script src="/harbingernews/js/bootstrap.js" type="text/javascript"></script>
