Changed layout of index page and started on individual club pages
Instead of the accordion layout which is on the site now, I have changed
it to a more simple dropdown menu interface. The students and teachers I
asked preferred my design.
Individual club pages are not quite done yet, I still need information
for most of them. All the information on the pages now was taken from
the mini.html and the original index, so not everything has all of the
necessary information, such as room numbers or meeting dates/times.

--- a/clubs/Best Buddies/template.html
+++ b/clubs/Best Buddies/template.html
@@ -222,13 +222,12 @@
 			</div> 
 			<div class="row">
 				<div class="span7">
-					<h4 class = "offset1">About <em>This Club</em></h4>
-					<p>Advisor(s): <em>Name</em></p> 
-					<p>Room: <em>Room #</em>
-					<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-					<p>Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit. Sed posuere consectetur est at lobortis.</p>
+					<h4 class = "offset1">About Best Buddies</h4>
+					<p>Advisors: Ms. Carroll and Ms. Ambrosio</p> 
+					<p>Room: T20
+					<p>The primary mission of Best Buddies is to extend the borders of the school community, and make sure everyone feels that they are a part of the Harborfields family. As a group, Best Buddies strives to bridge the gap between cliques, giving individuals a chance to interact with other people that they may not usually associate with. Best Buddies is not composed of jocks or preps, but of Harborfields students who are interested in meeting new people and making a difference in their immediate community.</p>
 					<br/>
-					<p>This club meets <em>Days and times here</em></p>
+					<p>This club meets monthly on Thursdays from 3pm-5pm. See advisor for details</p>
 
 				</div>
 			
@@ -259,7 +258,7 @@
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
-					This page was last updated by Alex LaFroscia on September 10, 2012.
+					This page was last updated by Brian Kelley on January 12, 2013.
 			</div>
 		</div>
 	
