--- a/clubs/Community Outreach Club/template.html
+++ b/clubs/Community Outreach Club/template.html
@@ -222,13 +222,12 @@
 			</div> 
 			<div class="row">
 				<div class="span7">
-					<h4 class = "offset1">About <em>This Club</em></h4>
-					<p>Advisor(s): <em>Name</em></p> 
-					<p>Room: <em>Room #</em>
-					<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-					<p>Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit. Sed posuere consectetur est at lobortis.</p>
+					<h4 class = "offset1">About the Community Outreach Club</h4>
+					<p>Advisor: Ms. Boba</p> 
+					<p>Room: <em>Coming Soon</em>
+					<p>The Community Outreach Club is an organization committed to serving those families in need within our own community. Students participate in food shopping, stocking our food pantry, and preparing all of the food baskets that are delivered directly to our families’ front doors. The Club was honored their first year with the ANTI─HUNGER ACTION AWARD presented by LONG ISLAND HEALTH AND WELFARE COUNCIL for their amazing work to stamp out hunger on Long Island. Community service hours are available.</p>
 					<br/>
-					<p>This club meets <em>Days and times here</em></p>
+					<p></p>
 
 				</div>
 			
@@ -259,7 +258,7 @@
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
-					This page was last updated by Alex LaFroscia on September 10, 2012.
+					This page was last updated by Brian Kelley on January 12, 2013.
 			</div>
 		</div>
 	
