--- a/clubs/Council for Multicultural Unity/template.html
+++ b/clubs/Council for Multicultural Unity/template.html
@@ -222,13 +222,12 @@
 			</div> 
 			<div class="row">
 				<div class="span7">
-					<h4 class = "offset1">About <em>This Club</em></h4>
-					<p>Advisor(s): <em>Name</em></p> 
-					<p>Room: <em>Room #</em>
-					<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-					<p>Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit. Sed posuere consectetur est at lobortis.</p>
+					<h4 class = "offset1">About the Council for Multicultural Unity</h4>
+					<p>Advisors: Ms. LaMantia and Mr. Barrett</p> 
+					<p>Room: T11</p> 
+					<p>This committee is dedicated to recognizing and celebrating the diversity in the Harborfields community. Students work together to organize various cultural events in the high school as well as in the district. The committee assists in organizing activities centered around such programs as Mix-it-up-at-lunch, Black History Month, and Women’s History Month. Students cooperatively learn about other cultures through a monthly film selection and discussion as well.</p>
 					<br/>
-					<p>This club meets <em>Days and times here</em></p>
+					<p>This club meets on alternating Tuesdays</p>
 
 				</div>
 			
@@ -259,7 +258,7 @@
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
-					This page was last updated by Alex LaFroscia on September 10, 2012.
+					This page was last updated by Alex LaFroscia on January 12, 2013.
 			</div>
 		</div>
 	
