--- a/clubs/French Club/template.html
+++ b/clubs/French Club/template.html
@@ -222,13 +222,12 @@
 			</div> 
 			<div class="row">
 				<div class="span7">
-					<h4 class = "offset1">About <em>This Club</em></h4>
-					<p>Advisor(s): <em>Name</em></p> 
-					<p>Room: <em>Room #</em>
-					<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-					<p>Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit. Sed posuere consectetur est at lobortis.</p>
+					<h4 class = "offset1">About the French Club</h4>
+					<p>Advisor: Ms. D'Amore</p> 
+					<p>Room: 213</p>
+					<p>Le Cercle Francais is an active club which explores many aspects of the French culture. Club members enjoy French food tasting, listening to French music, watching French movies, and celebrating French holidays such as Mardi Gras! They organize trips to museums, restaurants, concerts, and hockey games. The club holds bake sales and earns money to donate to humanitarian organizations working in Africa and other Francophone countries. Members also enjoy teaching basic French to the younger students at the elementary and primary schools as well visiting Middle School students to share their enthusiasm for the French language and culture. Our end of the year soiree includes a variety of delicious French dishes and desserts! The French Club meets once every two weeks and is open to anyone who is interested in French culture! New members and new ideas are always welcome!</p>
 					<br/>
-					<p>This club meets <em>Days and times here</em></p>
+					<p>This club meets twice monthly.</p>
 
 				</div>
 			
@@ -259,7 +258,7 @@
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
-					This page was last updated by Alex LaFroscia on September 10, 2012.
+					This page was last updated by Brian Kelley on January 12, 2013.
 			</div>
 		</div>
 	
