--- a/clubs/Athletes Helping Athletes/template.html
+++ b/clubs/Athletes Helping Athletes/template.html
@@ -222,13 +222,12 @@
 			</div> 
 			<div class="row">
 				<div class="span7">
-					<h4 class = "offset1">About <em>This Club</em></h4>
-					<p>Advisor(s): <em>Name</em></p> 
-					<p>Room: <em>Room #</em>
-					<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-					<p>Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit. Sed posuere consectetur est at lobortis.</p>
+					<h4 class = "offset1">About Athletes Helping Athletes</h4>
+					<p>Advisors: Ms. McGinty and Mr. Taylor</p> 
+					<p>Room: Multi-Purpose Room</p>
+					<p>The Athletes Helping Athletes program of Harborfields High School recognizes the role of sports and athletes in developing and encouraging youngsters to be responsible members of their community. In delivering an early intervention drug, alcohol , tobacco and violence prevention program to fifth and sixth grade students, and by processing the issues of sportsmanship, civility, bullying, and teasing, the student-athlete leaders of Athletes Helping Athletes seek to encourage students to stay in school, avoid substance abuse and violence, as well as be respectful of both themselves and others. It is the mission of the student-athlete role models to inspire the youth in our community to make healthy choices, positive decisions, and to have respectful interactions; and consequently, improve the quality of life in our community.</p>
 					<br/>
-					<p>This club meets <em>Days and times here</em></p>
+					<p>This club meets 10 times per year, Periods 1-4. See advisors for details</p>
 
 				</div>
 			
@@ -259,7 +258,7 @@
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
-					This page was last updated by Alex LaFroscia on September 10, 2012.
+					This page was last updated by Brian Kelley on January 12, 2013.
 			</div>
 		</div>
 	
