--- a/clubs/Environmental Club/template.html
+++ b/clubs/Environmental Club/template.html
@@ -222,13 +222,12 @@
 			</div> 
 			<div class="row">
 				<div class="span7">
-					<h4 class = "offset1">About <em>This Club</em></h4>
-					<p>Advisor(s): <em>Name</em></p> 
-					<p>Room: <em>Room #</em>
-					<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-					<p>Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit. Sed posuere consectetur est at lobortis.</p>
+					<h4 class = "offset1">About the Environmental Club</h4>
+					<p>Advisor: Mr. Flynn</p> 
+					<p>Room: T2</p>
+					<p>The Environmental Club meets to discuss environmental issues that are having an impact either locally or nationally. Sometimes, the club writes letters to Congressmen asking them to act on these environmental concerns and they might attend town board meetings when environmental issues are being discussed or voted on. The group is committed to raising awareness of environmental issues throughout the school and is also responsible for various school-wide recycling programs including ink cartridges/toner, cell phones, and paper. The group is often involved in beach clean-ups and beautification projects at the high school. The only requirement to join the Environmental Club is a commitment to the environment.</p>
 					<br/>
-					<p>This club meets <em>Days and times here</em></p>
+					<p>This club meets the 2nd and 4th Tuesday every month at 2:30pm</p>
 
 				</div>
 			
@@ -259,7 +258,7 @@
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
-					This page was last updated by Alex LaFroscia on September 10, 2012.
+					This page was last updated by Brian Kelley on January 12, 2013.
 			</div>
 		</div>
 	
