--- a/clubs/Future Educators Club/template.html
+++ b/clubs/Future Educators Club/template.html
@@ -222,13 +222,12 @@
 			</div> 
 			<div class="row">
 				<div class="span7">
-					<h4 class = "offset1">About <em>This Club</em></h4>
-					<p>Advisor(s): <em>Name</em></p> 
-					<p>Room: <em>Room #</em>
-					<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-					<p>Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit. Sed posuere consectetur est at lobortis.</p>
+					<h4 class = "offset1">About the Future Educators Club</h4>
+					<p>Advisors: Ms. Turzer and Ms. Fleishman</p> 
+					<p>Room: T20</p>
+					<p>Future Educators is a club designed for students who have expressed an interest in pursuing the field of education after high school. Students meet monthly at the high school to discuss teaching strategies, placement experiences, and community service ideas. Our students are afforded the opportunity to work in an elementary classroom one day a week after school. In this venue they have the chance to experience first hand what happens in a classroom. In addition, students participate in a variety of activities that support the community including Safe Halloween and Special Olympics. This club is open to students in grades 9-12. Future Educators meeting the requirements can join the Future Educators National Honor Society.</p>
 					<br/>
-					<p>This club meets <em>Days and times here</em></p>
+					<p>This club meets Tuesdays once a month. Officers at 7 AM and members at 2:20 PM</p>
 
 				</div>
 			
@@ -259,7 +258,7 @@
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
-					This page was last updated by Alex LaFroscia on September 10, 2012.
+					This page was last updated by Brian Kelley on January 12, 2013.
 			</div>
 		</div>
 	
