--- a/clubs/Global Justice/template.html
+++ b/clubs/Global Justice/template.html
@@ -222,13 +222,12 @@
 			</div> 
 			<div class="row">
 				<div class="span7">
-					<h4 class = "offset1">About <em>This Club</em></h4>
-					<p>Advisor(s): <em>Name</em></p> 
-					<p>Room: <em>Room #</em>
-					<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-					<p>Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit. Sed posuere consectetur est at lobortis.</p>
+					<h4 class = "offset1">About Global Justice</h4>
+					<p>Advisor: Ms. DaSilva </p> 
+					<p>Room: 304</p>
+					<p>The Harborfields High School Students for Global Justice Club is an organization that was founded to help educate the Harborfields community about social issues affecting people across the globe. The goal is to attract students to participate on a local level and demonstrate how their actions can have far reaching effects. This club meets bi-monthly and works on various group projects throughout the year. Students involved in this club should have a desire to help others and an interest in global issues.</p>
 					<br/>
-					<p>This club meets <em>Days and times here</em></p>
+					<p>This club meets the 1st and 3rd Thursday of the month at 2:30pm.</p>
 
 				</div>
 			
@@ -259,7 +258,7 @@
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
-					This page was last updated by Alex LaFroscia on September 10, 2012.
+					This page was last updated by Brian Kelley on January 12, 2013.
 			</div>
 		</div>
 	
