--- a/clubs/Habitat/template.html
+++ b/clubs/Habitat/template.html
@@ -222,13 +222,12 @@
 			</div> 
 			<div class="row">
 				<div class="span7">
-					<h4 class = "offset1">About <em>This Club</em></h4>
-					<p>Advisor(s): <em>Name</em></p> 
-					<p>Room: <em>Room #</em>
-					<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-					<p>Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit. Sed posuere consectetur est at lobortis.</p>
+					<h4 class = "offset1">About Habitat for Humanity</h4>
+					<p>Advisor: Ms. Gold</p> 
+					<p>Room: 212</p>
+					<p>The Habitat for Humanity club at Harborfields High School provides students the opportunity to work together with needy families on long Island. The students have many fund raisers throughout the year. This money allows them to be involved in a hands-on building experience and to help hard working families fulfill their dreams of owning their own home. The club meets bi weekly. All students are welcome to join. The privilege to build is based on years of participation and age of each student.</p>
 					<br/>
-					<p>This club meets <em>Days and times here</em></p>
+					<p>This club meets on the 2nd and 4th Wednesday of the month at 2:30pm</p>
 
 				</div>
 			
@@ -259,7 +258,7 @@
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
-					This page was last updated by Alex LaFroscia on September 10, 2012.
+					This page was last updated by Brian Kelley on January 12, 2013.
 			</div>
 		</div>
 	
