--- a/clubs/Spanish Club/template.html
+++ b/clubs/Spanish Club/template.html
@@ -222,13 +222,12 @@
 			</div> 
 			<div class="row">
 				<div class="span7">
-					<h4 class = "offset1">About <em>This Club</em></h4>
-					<p>Advisor(s): <em>Name</em></p> 
-					<p>Room: <em>Room #</em>
-					<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-					<p>Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit. Sed posuere consectetur est at lobortis.</p>
+					<h4 class = "offset1">About the Spanish Club</h4>
+					<p>Advisor(s): <em>Coming Soon</em></p> 
+					<p>Room: <em>Coming Soon</em>
+					<p>El club de español is a lively club that explores Spanish and Hispanic cultures. Members enjoy Spanish and Hispanic food, movies and music. Members have the opportunity to celebrate and learn about cultural holidays such as El día de los muertos, El cinco de mayo and La tomatina. Students are also actively involved in raising funds for humanitarian organizations as well as club expenses. The end of the year fiesta includes tasty authentic treats and cultural music and dancing. Our club also participates in school functions such as Safe-Halloween and La Sociedad Honoraria Hispánica.</p>
 					<br/>
-					<p>This club meets <em>Days and times here</em></p>
+					<p>This club meets <em>TBA</em></p>
 
 				</div>
 			
@@ -259,7 +258,7 @@
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
-					This page was last updated by Alex LaFroscia on September 10, 2012.
+					This page was last updated by Brian Kelley on January 12, 2013.
 			</div>
 		</div>
 	
