Added content, fixed bugs, polished layout, and more.
Added content to all of the club pages that i got any information for,
however some clubs are still missing some or all of the information that
I wanted.
Also fixed some bugs which I found when the page was displayed at lower
resolutions.
Finally, I also made the second header an SSI for quicker editing.

--- a/clubs/Marching Band/template.html
+++ b/clubs/Marching Band/template.html
@@ -123,12 +123,12 @@
 			</div> 
 			<div class="row">
 				<div class = "about">
-					<h4 class = "offset1">About the Caribbean Club</h4>
-					<p>Advisor: Ms. Koenig</p> 
-					<p>Room: Guidance Resource Center</p>
-					<p>The Caribbean Club is open to all students to come together and learn from each other about different Caribbean cultures, languages, food and music. Our club also has a social service component where we raise awareness and participate in community service activities. We also have a holiday and year end party featuring a Caribbean feast!</p>
+					<h4 class = "offset1">About Marching Band</h4>
+					<p>Advisor(s): <em>Coming Soon</em></p> 
+					<p>Room: <em>Coming Soon</em></p>
+					<p>Information Coming Soon</p>
 					<br/>
-					<p>This club meets on the 2nd and 4th Thursdays of each month, from 2:30-3:30pm</p>
+					<p>This club meets <em>TBA</em></p>
 
 				</div>
 			
@@ -159,7 +159,7 @@
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
-					This page was last updated by Brian Kelley on January 12, 2013.
+					This page was last updated by Alex LaFroscia on September 10, 2012.
 			</div>
 		</div>
 	
