--- a/clubs/Tri-Fit/template.html
+++ b/clubs/Tri-Fit/template.html
@@ -123,12 +123,13 @@
 			</div> 
 			<div class="row">
 				<div class = "about">
-					<h4 class = "offset1">About the Caribbean Club</h4>
-					<p>Advisor: Ms. Koenig</p> 
-					<p>Room: Guidance Resource Center</p>
-					<p>The Caribbean Club is open to all students to come together and learn from each other about different Caribbean cultures, languages, food and music. Our club also has a social service component where we raise awareness and participate in community service activities. We also have a holiday and year end party featuring a Caribbean feast!</p>
+					<h4 class = "offset1">About Tri-Fit</h4>
+					<p>Advisor: Mr. Zenuh</p> 
+					<p>Room: Cafeteria</p>
+					<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+					<p>Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit. Sed posuere consectetur est at lobortis.</p>
 					<br/>
-					<p>This club meets on the 2nd and 4th Thursdays of each month, from 2:30-3:30pm</p>
+					<p>See advisor for details.</p>
 
 				</div>
 			
@@ -159,7 +160,7 @@
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
-					This page was last updated by Brian Kelley on January 12, 2013.
+					This page was last updated by Brian Kelley on January 15, 2013.
 			</div>
 		</div>
 	
