--- a/clubs/Tri-M/template.html
+++ b/clubs/Tri-M/template.html
@@ -123,12 +123,21 @@
 			</div> 
 			<div class="row">
 				<div class = "about">
-					<h4 class = "offset1">About the Caribbean Club</h4>
-					<p>Advisor: Ms. Koenig</p> 
-					<p>Room: Guidance Resource Center</p>
-					<p>The Caribbean Club is open to all students to come together and learn from each other about different Caribbean cultures, languages, food and music. Our club also has a social service component where we raise awareness and participate in community service activities. We also have a holiday and year end party featuring a Caribbean feast!</p>
+					<h4 class = "offset1">About Tri-M</h4>
+					<p>Advisor: Ms. Scilla</p> 
+					<p>Room: Band Room</p>
+					<p>Tri-M is a music honor society in which the underlying goal is to further the education and
+quality of music in both our community and school. Upon induction into the Tri-M Music
+Honor Society each member is required to participate in a number of community service related
+activities deemed applicable for members of a music honor society. The Tri-M Music Honor
+Society actively participates in the assistance at school district concerts, NYSSMA, SCMEA All
+County Festivals and other community-based musical activities. The requirements to join Tri-M
+are: an 85 weighted average in all subject areas; a 95 unweighted average in music courses;
+enrollment in a HHS music performance ensemble; excellent character; and qualities of
+leadership and service. The Tri-M meets on the second Monday of each month.
+</p>
 					<br/>
-					<p>This club meets on the 2nd and 4th Thursdays of each month, from 2:30-3:30pm</p>
+					<p>This club meets on the 2nd Monday each month, from 2:30-3:30 and as needed.</p>
 
 				</div>
 			
@@ -159,7 +168,7 @@
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
-					This page was last updated by Brian Kelley on January 12, 2013.
+					This page was last updated by Alex LaFroscia on September 10, 2012.
 			</div>
 		</div>
 	
