--- a/clubs/Italian Club/template.html
+++ b/clubs/Italian Club/template.html
@@ -83,6 +83,14 @@
 			background-color: white !important;
 			color: #629b63 !important;
 		}
+		.about {
+			width: 70%; 
+			background-color: white; 
+			box-shadow: 0px 2px 2px 0px; 
+			padding: 5px 10px 5px 10px; 
+			margin-top: 10px; 
+			float: left;
+		}
 	
 	</style>
 	
@@ -90,114 +98,7 @@
 <body>
 	<div id = "content" style ="">
 		<!--#include virtual="/harbingernews/tools/header.shtml"-->
-		<div class="navbar navbar-static-top" style = "border-bottom: #629b63;">
-      		<div class = "navbar-inner">
-        		<div class = "container">
-         		 	<ul class = "nav pull-left">
-                		<li class="dropdown" id="menu1"><!-- Starts the "Arts" dropdown menu-->
-                    	<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    	Arts
-                    	<b class="caret"></b>
-                    	</a>
-                    	<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                        	<li><a href="../art club/template.html">Art</a></li>
-                        	<li><a href="../harbinger/template.html">Harbinger</a></li>
-                        	<li><a href="../HTco/template.html">HTco</a></li>
-                        	<li><a href="../jazz band/template.html">Jazz Band</a></li>
-                        	<li><a href="../music appreciation/template.html">Music Appreciation</a></li>
-                        	<li><a href="../nahs/template.html">NAHS</a></li>
-                        	<li><a href="../playfest/template.html">Playfest</a></li>
-                        	<li><a href="../zephyr/template.html">Zephyr</a></li>
-                    	</ul>
-                </li><!--Ends dropdown menu-->
-
-            </ul>
-            <ul class = "nav pull-left">
-                <li class="dropdown" id="menu2"><!-- Starts the "Academics" dropdown menu-->
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    Academic
-                    <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                        <li><a href="../academic team/template.html">Academic Club</a></li>
-                        <li><a href="../deca/template.html">DECA</a></li>
-                        <li><a href="../future educators club/template.html">Future Educators Club</a></li>
-                        <li><a href="../mathletes/template.html">Mathletes</a></li>
-                        <li><a href="../mock trial/template.html">Mock Trial</a></li>
-                        <li><a href="../NHS/template.html">NHS</a></li>
-                    </ul>
-                </li><!--Ends dropdown menu-->
-
-            </ul>
-            <ul class = "nav pull-left">
-                <li class="dropdown" id="menu3"><!-- Starts the "Community Service" dropdown menu-->
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    Community Service
-                    <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                        <li><a href="../community outreach club/template.html">Community Outreach</a></li>
-                        <li><a href="../global justice/template.html">Global Justice</a></li>
-                        <li><a href="../habitat/template.html">Habitat for Humanity</a></li>
-                        <li><a href="../interact/template.html">Interact</a></li>
-                        <li><a href="../shoc/template.html">SHOC</a></li>
-                    </ul>
-                </li><!--Ends dropdown menu-->
-
-            </ul>
-            <ul class = "nav pull-left">
-                <li class="dropdown" id="menu4"><!-- Starts the "Cultural" dropdown menu-->
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    Cultural
-                    <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu;">
-                        <li><a href="../caribbean club/template.html">Caribbean Club</a></li>
-                        <li><a href="../french club/template.html">French Club</a></li>
-                        <li><a href="../italian club/template.html">Italian Club</a></li>
-                        <li><a href="../model un/template.html">Model UN</a></li>
-                        <li><a href="../council for multicultural unity/template.html">Multi-Cultural Club</a></li>
-                        <li><a href="../spanish club/template.html">Spanish Club</a></li>
-                    </ul>
-                </li><!--Ends dropdown menu-->
-
-            </ul>
-            <ul class = "nav pull-left">
-                <li class="dropdown" id="menu5"><!-- Starts the "Sciences" dropdown menu-->
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    Sciences
-                    <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                        <li><a href="../environmental club/template.html">Environmental Club</a></li>
-                        <li><a href="../forensics club/template.html">Forensics Club</a></li>
-                        <li><a href="../engineering and science club/template.html">Science and Engineering</a></li>
-                        <li><a href="../technology club/template.html">Technology Club</a></li>
-                    </ul>
-                </li><!--Ends dropdown menu-->
-
-            </ul>
-            <ul class = "nav pull-left">
-                <li class="dropdown" id="menu6"><!-- Starts the "Student Services" dropdown menu-->
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    Student Services
-                    <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                        <li><a href="../athletes helping athletes/template.html">Athletes Helping Athletes</a></li>
-                        <li><a href="../best buddies/template.html">Best Buddies</a></li>
-                        <li><a href="../gsa/template.html">Gay/Straight Alliance</a></li>
-                        <li><a href="../sadd/template.html">SADD</a></li>
-                        <li><a href="../student gov/template.html">Student Government</a></li>
-                    </ul>
-                </li><!--Ends final dropdown menu-->
-            </ul>
-            <div style = "display:none;"
-		</div>
-	</div>
-</div>
-</div>
-</div>
+		<!--#include virtual="/harbingernews/clubs/header2.shtml"-->
 		
 		<div id="info" class="container">
 			<div class="row">
@@ -208,26 +109,23 @@
 					<p>Maecenas faucibus mollis interdum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
 				
 				</div>
-				<div class="span4" id="upcoming_events" style = "right:5%; position:absolute;">
+				<div id="upcoming_events" style = "right:5%; position:absolute; width: 20%;">
 					<h4>Upcoming Events</h4>
 					<ul>
-						<li>Event One</li>
-						<li>Event Two</li>
-						<li>Event Three</li>
-						<li>Event Four</li>
+						<li>Circolo Italiano is making its annual pilgrimage to the <a href="http://www.alacartecs.com/">A La Carte Culinary School</a> on February 12, 2013!</li>
 					</ul>
 					
 				</div>		
 		
 			</div> 
 			<div class="row">
-				<div class="span7">
+				<div class = "about">
 					<h4 class = "offset1">About the Italian Club</h4>
-					<p>Advisor(s): <em>Coming Soon</em></p> 
-					<p>Room: <em>Coming Soon</em></p>
+					<p>Advisor: Mr. Butler</p> 
+					<p>Room: T6</p>
 					<p>Il Circolo Italiano is the Italian club of Harborfields High School. In 2010-2011, we went to see "Pinocchio, the Musical" in Manhattan, learned cooking skills at the A La Carte Culinary School in Lynbrook, New York, raised money for the Fukushima, Japan Tsumami relief efforts, learned to play Scopa (a traditional Italian Card Game) and played Bocce outdoors. The Circolo meets every two weeks and is always open to new members. You don't need to speak Italian to join us. Ci vediamo lì! (See you there!)</p>
 					<br/>
-					<p>This club meets <em>TBA</em></p>
+					<p>See advisor for details.</p>
 
 				</div>
 			
