--- a/clubs/index.html
+++ b/clubs/index.html
@@ -71,6 +71,14 @@
 			background-color: white !important;
 			color: #629b63 !important;
 		}
+		.about {
+			width: 70%; 
+			background-color: white; 
+			box-shadow: 0px 2px 2px 0px; 
+			padding: 5px 10px 5px 10px; 
+			margin-top: 10px; 
+			float: left;
+		}
 	
 		#page {
 			margin-top: 10px;
@@ -82,7 +90,6 @@
 		}
 		
 		#announcements {
-  			position:static !important;
   			background: #fff;
   			padding: 10px;
   			margin-bottom: 0px;
@@ -94,7 +101,6 @@
 			-moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
   			box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18); 
   		}
-  		
 	</style>
 	
 	<script type="text/javascript">
@@ -110,27 +116,29 @@
 	
 </head>
 <body>
-	<div id = "content" style ="">
+	<div id = "content">
 		<!--#include virtual="/harbingernews/tools/header.shtml"-->
 		<div class="navbar navbar-static-top" style = "border-bottom: #629b63;">
-      		<div class = "navbar-inner">
-        		<div class = "container">
-         		 	<ul class = "nav pull-left">
-                		<li class="dropdown" id="menu1"><!-- Starts the "Arts" dropdown menu-->
-                    	<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+    <div class = "navbar-inner">
+    	<div class = "container">
+        	<ul class = "nav pull-left">
+            	<li class="dropdown" id="menu1"><!-- Starts the "Arts" dropdown menu-->
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                     	Arts
                     	<b class="caret"></b>
                     	</a>
-                    	<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                        	<li><a href="art club/template.html">Art</a></li>
-                        	<li><a href="harbinger/template.html">Harbinger</a></li>
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
+                        	<li><a href="Art Club/template.html">Art</a></li>
+                        	<li><a href="Harbinger/template.html">Harbinger</a></li>
                         	<li><a href="HTco/template.html">HTco</a></li>
-                        	<li><a href="jazz band/template.html">Jazz Band</a></li>
-                        	<li><a href="music appreciation/template.html">Music Appreciation</a></li>
-                        	<li><a href="nahs/template.html">NAHS</a></li>
-                        	<li><a href="playfest/template.html">Playfest</a></li>
-                        	<li><a href="zephyr/template.html">Zephyr</a></li>
-                    	</ul>
+                        	<li><a href="Jazz Band/template.html">Jazz Band</a></li>
+                            <li><a href="Marching Band/template.html">Marching Band</a></li>
+                        	<li><a href="Music Appreciation/template.html">Music Appreciation</a></li>
+                        	<li><a href="NAHS/template.html">NAHS</a></li>
+                        	<li><a href="Playfest/template.html">Playfest</a></li>
+                            <li><a href="Tri-M/template.html">Tri-M</a></li>
+                        	<li><a href="Zephyr/template.html">Zephyr</a></li>
+                	</ul>
                 </li><!--Ends dropdown menu-->
 
             </ul>
@@ -141,11 +149,11 @@
                     <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                        <li><a href="academic team/template.html">Academic Club</a></li>
-                        <li><a href="deca/template.html">DECA</a></li>
-                        <li><a href="future educators club/template.html">Future Educators Club</a></li>
-                        <li><a href="mathletes/template.html">Mathletes</a></li>
-                        <li><a href="mock trial/template.html">Mock Trial</a></li>
+                        <li><a href="Academic Team/template.html">Academic Club</a></li>
+                        <li><a href="DECA/template.html">DECA</a></li>
+                        <li><a href="Future Educators Club/template.html">Future Educators Club</a></li>
+                        <li><a href="Mathletes/template.html">Mathletes</a></li>
+                        <li><a href="Mock Trial/template.html">Mock Trial</a></li>
                         <li><a href="NHS/template.html">NHS</a></li>
                     </ul>
                 </li><!--Ends dropdown menu-->
@@ -158,11 +166,11 @@
                     <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                        <li><a href="community outreach club/template.html">Community Outreach</a></li>
-                        <li><a href="global justice/template.html">Global Justice</a></li>
-                        <li><a href="habitat/template.html">Habitat for Humanity</a></li>
-                        <li><a href="interact/template.html">Interact</a></li>
-                        <li><a href="shoc/template.html">SHOC</a></li>
+                        <li><a href="Community Outreach Club/template.html">Community Outreach</a></li>
+                        <li><a href="Global Justice/template.html">Global Justice</a></li>
+                        <li><a href="Habitat/template.html">Habitat for Humanity</a></li>
+                        <li><a href="Interact/template.html">Interact</a></li>
+                        <li><a href="SHOC/template.html">SHOC</a></li>
                     </ul>
                 </li><!--Ends dropdown menu-->
 
@@ -174,12 +182,12 @@
                     <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu;">
-                        <li><a href="caribbean club/template.html">Caribbean Club</a></li>
-                        <li><a href="french club/template.html">French Club</a></li>
-                        <li><a href="italian club/template.html">Italian Club</a></li>
-                        <li><a href="model un/template.html">Model UN</a></li>
-                        <li><a href="council for multicultural unity/template.html">Multi-Cultural Club</a></li>
-                        <li><a href="spanish club/template.html">Spanish Club</a></li>
+                        <li><a href="Caribbean Club/template.html">Caribbean Club</a></li>
+                        <li><a href="French Club/template.html">French Club</a></li>
+                        <li><a href="Italian Club/template.html">Italian Club</a></li>
+                        <li><a href="Model UN/template.html">Model UN</a></li>
+                        <li><a href="Council for Multicultural Unity/template.html">Multi-Cultural Club</a></li>
+                        <li><a href="Spanish Club/template.html">Spanish Club</a></li>
                     </ul>
                 </li><!--Ends dropdown menu-->
 
@@ -191,10 +199,10 @@
                     <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                        <li><a href="environmental club/template.html">Environmental Club</a></li>
-                        <li><a href="forensics club/template.html">Forensics Club</a></li>
-                        <li><a href="engineering and science club/template.html">Science and Engineering</a></li>
-                        <li><a href="technology club/template.html">Technology Club</a></li>
+                        <li><a href="Environmental Club/template.html">Environmental Club</a></li>
+                        <li><a href="Forensics Club/template.html">Forensics Club</a></li>
+                        <li><a href="Engineering and Science Club/template.html">Science and Engineering</a></li>
+                        <li><a href="Technology Club/template.html">Technology Club</a></li>
                     </ul>
                 </li><!--Ends dropdown menu-->
 
@@ -206,28 +214,31 @@
                     <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                        <li><a href="athletes helping athletes/template.html">Athletes Helping Athletes</a></li>
-                        <li><a href="best buddies/template.html">Best Buddies</a></li>
-                        <li><a href="gsa/template.html">Gay/Straight Alliance</a></li>
-                        <li><a href="sadd/template.html">SADD</a></li>
-                        <li><a href="student gov/template.html">Student Government</a></li>
+                        <li><a href="Athletes Helping Athletes/template.html">Athletes Helping Athletes</a></li>
+                        <li><a href="Best Buddies/template.html">Best Buddies</a></li>
+                        <li><a href="GSA/template.html">Gay/Straight Alliance</a></li>
+                        <li><a href="SADD/template.html">SADD</a></li>
+                        <li><a href="Student Gov/template.html">Student Government</a></li>
                     </ul>
                 </li><!--Ends final dropdown menu-->
             </ul>
             <div style = "display:none;"
-		</div>
-	</div>
-</div>
+		    </div>
+	    </div>
+    </div>
 </div>
 </div>
 	<div>
 		<div>
 			<div>
 				<div  id = "announcements"> <!--Begins announcements part of the page-->
-					<h1 style = "padding-left: 20px;">Club Announcements</h1>
+					<h1>Club Announcements</h1>
 					<div class = "row">
-						<div class = "span9 offset1" style = "font-size:15px; margin-right: 0px;">
+						<div class = "span8 offset1" style = "font-size:15px; margin-right: 0px;">
 							<ul>
+								<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia scelerisque eros nec viverra. Phasellus vehicula est consectetur arcu convallis viverra. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras a leo facilisis elit vulputate dignissim non auctor nisl. Cras blandit vehicula nisl, non feugiat sem venenatis eget. Vivamus lectus sapien, sodales id sagittis sit amet, placerat nec dolor. Nunc sapien mauris, consequat nec tincidunt id, mattis sed odio. Aliquam erat volutpat.</li>
+								<li>Donec laoreet accumsan justo, non fermentum orci dictum sit amet. Nam euismod nisi eget nunc sagittis hendrerit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi vel erat id massa dapibus fermentum. Nullam dignissim nulla vitae justo sollicitudin vel varius neque placerat. In feugiat nulla ac nulla laoreet interdum.</li>
+								<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sapien arcu, tincidunt et malesuada nec, sollicitudin non lacus. In venenatis sapien ut arcu scelerisque dictum. Praesent et ultrices sapien. Nunc sed ligula dolor. Nulla diam risus, dictum quis pellentesque vitae, tincidunt et libero. Ut ornare feugiat tincidunt. Praesent vel pharetra dolor. Vestibulum ac diam justo, eu congue sapien.</li>
 								<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia scelerisque eros nec viverra. Phasellus vehicula est consectetur arcu convallis viverra. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras a leo facilisis elit vulputate dignissim non auctor nisl. Cras blandit vehicula nisl, non feugiat sem venenatis eget. Vivamus lectus sapien, sodales id sagittis sit amet, placerat nec dolor. Nunc sapien mauris, consequat nec tincidunt id, mattis sed odio. Aliquam erat volutpat.</li>
 								<li>Donec laoreet accumsan justo, non fermentum orci dictum sit amet. Nam euismod nisi eget nunc sagittis hendrerit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi vel erat id massa dapibus fermentum. Nullam dignissim nulla vitae justo sollicitudin vel varius neque placerat. In feugiat nulla ac nulla laoreet interdum.</li>
 								<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sapien arcu, tincidunt et malesuada nec, sollicitudin non lacus. In venenatis sapien ut arcu scelerisque dictum. Praesent et ultrices sapien. Nunc sed ligula dolor. Nulla diam risus, dictum quis pellentesque vitae, tincidunt et libero. Ut ornare feugiat tincidunt. Praesent vel pharetra dolor. Vestibulum ac diam justo, eu congue sapien.</li>
@@ -238,9 +249,10 @@
 			</div>
     	</div>
     </div>
-
-</div>		
-	<div id="footer" style = "position: absolute; margin:auto;">
+    <div>
+</div>
+<div style = margin-bottom:20px></div>		
+	<div id="footer" style = "margin:auto;">
 	
 		<!--#include virtual="/harbingernews/tools/footer.shtml"-->
 		
