--- a/clubs/template.html
+++ b/clubs/template.html
@@ -83,6 +83,14 @@
 			background-color: white !important;
 			color: #629b63 !important;
 		}
+		.about {
+			width: 70%; 
+			background-color: white; 
+			box-shadow: 0px 2px 2px 0px; 
+			padding: 5px 10px 5px 10px; 
+			margin-top: 10px; 
+			float: left;
+		}
 	
 	</style>
 	
@@ -208,7 +216,7 @@
 					<p>Maecenas faucibus mollis interdum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
 				
 				</div>
-				<div class="span4" id="upcoming_events" style = "right:5%; position:absolute;">
+				<div id="upcoming_events" style = "right:5%; position:absolute; width: 20%; display: none;">
 					<h4>Upcoming Events</h4>
 					<ul>
 						<li>Event One</li>
@@ -221,7 +229,7 @@
 		
 			</div> 
 			<div class="row">
-				<div class="span7">
+				<div class = "about">
 					<h4 class = "offset1">About <em>This Club</em></h4>
 					<p>Advisor(s): <em>Name</em></p> 
 					<p>Room: <em>Room #</em>
@@ -259,7 +267,7 @@
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
-					This page was last updated by Alex LaFroscia on September 10, 2012.
+					This page was last updated by Brian Kelley on January 15, 2013.
 			</div>
 		</div>
 	
