Fixed white background on hover, added external stylesheet, and added pictures.
Navbar links now no longer have a white background color on hover, all
css except for what is individual to each page has been added to an
external stylesheet, and pictures have been added to Marching Band and
Tri-Fit pages.

--- a/clubs/index.html
+++ b/clubs/index.html
@@ -56,14 +56,10 @@
 		}
 	
 		/* Not sure why this was made white. It should be green. */
-		/* .nav li :hover {
-			background: #eeeeee !important;
-			color: #416847;
+		/* 
 		}
 		
-		.nav > .active > a {
-			background: white !important;
-		} */
+		 */
 		
 		.nav-collapse > .nav > .active > a {
 			background: #629b63 !important;
@@ -232,6 +228,7 @@
                         <li><a href="GSA/template.php">Gay/Straight Alliance</a></li>
                         <li><a href="SADD/template.php">SADD</a></li>
                         <li><a href="Student Gov/template.php">Student Government</a></li>
+                        <li><a href="Tri-Fit/template.php">Tri-Fit</a></li>
                     </ul>
                 </li><!--Ends final dropdown menu-->
             </ul>
