Added some content
I added some pictures to Marching Band, and I will put those into the
photo gallery I will push soon, and I also added some announcements to
the clubs index page, as well as their respective clubs. In the Marching
Band directory, the pictures are now stored in the folders "big" or
"small", for better organization.

--- a/clubs/index.html
+++ b/clubs/index.html
@@ -172,12 +172,8 @@
 					<div class = "row-fluid">
 						<div class = "span11 offset1" style = "font-size:15px; margin-right: 0px;">
 							<ul>
-								<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia scelerisque eros nec viverra. Phasellus vehicula est consectetur arcu convallis viverra. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras a leo facilisis elit vulputate dignissim non auctor nisl. Cras blandit vehicula nisl, non feugiat sem venenatis eget. Vivamus lectus sapien, sodales id sagittis sit amet, placerat nec dolor. Nunc sapien mauris, consequat nec tincidunt id, mattis sed odio. Aliquam erat volutpat.</li>
-								<li>Donec laoreet accumsan justo, non fermentum orci dictum sit amet. Nam euismod nisi eget nunc sagittis hendrerit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi vel erat id massa dapibus fermentum. Nullam dignissim nulla vitae justo sollicitudin vel varius neque placerat. In feugiat nulla ac nulla laoreet interdum.</li>
-								<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sapien arcu, tincidunt et malesuada nec, sollicitudin non lacus. In venenatis sapien ut arcu scelerisque dictum. Praesent et ultrices sapien. Nunc sed ligula dolor. Nulla diam risus, dictum quis pellentesque vitae, tincidunt et libero. Ut ornare feugiat tincidunt. Praesent vel pharetra dolor. Vestibulum ac diam justo, eu congue sapien.</li>
-								<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia scelerisque eros nec viverra. Phasellus vehicula est consectetur arcu convallis viverra. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras a leo facilisis elit vulputate dignissim non auctor nisl. Cras blandit vehicula nisl, non feugiat sem venenatis eget. Vivamus lectus sapien, sodales id sagittis sit amet, placerat nec dolor. Nunc sapien mauris, consequat nec tincidunt id, mattis sed odio. Aliquam erat volutpat.</li>
-								<li>Donec laoreet accumsan justo, non fermentum orci dictum sit amet. Nam euismod nisi eget nunc sagittis hendrerit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi vel erat id massa dapibus fermentum. Nullam dignissim nulla vitae justo sollicitudin vel varius neque placerat. In feugiat nulla ac nulla laoreet interdum.</li>
-								<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sapien arcu, tincidunt et malesuada nec, sollicitudin non lacus. In venenatis sapien ut arcu scelerisque dictum. Praesent et ultrices sapien. Nunc sed ligula dolor. Nulla diam risus, dictum quis pellentesque vitae, tincidunt et libero. Ut ornare feugiat tincidunt. Praesent vel pharetra dolor. Vestibulum ac diam justo, eu congue sapien.</li>
+								<li> Global Justice Concert: March 1st @ 7pm</li>
+                                <li> SADD and Interact will be hosting a Blood Drive on Tuesday, April 16th in the MPR.</li>
 							</ul>
 						</div>
 					</div>
@@ -188,7 +184,7 @@
     <div>
 </div>
 <div style = margin-bottom:20px></div>		
-	<div id="footer" style = "margin:auto;">
+	<div id="footer" style = "margin:auto; position: absolute; bottom: 0;">
 	
 		<!--#include virtual="/harbingernews/tools/footer.shtml"-->
 				
